Fix other wrapper spacing issue pls

--- a/src/components/PageWrapper/PageWrapper.module.scss
+++ b/src/components/PageWrapper/PageWrapper.module.scss
@@ -7,7 +7,6 @@
     animation-duration: 0.3s;
     animation-name: load;
     display: flex;
-    height: 100%;
     justify-content: center;
     min-height: calc(100vh - #{constants.$navbar-height});
     transition: opacity constants.$transition-time,
@@ -18,7 +17,6 @@
         align-items: center;
         display: flex;
         justify-content: center;
-        height: 100%;
         max-width: constants.$max-width;
         padding: constants.$page-padding;
         width: 100%;
